# digint

./: .flake8  README.md  build-and-release.bat  pyproject.toml  requirements.txt  robotstemplate.txt
digint/: __init__.py  digint.py  errors.py  notation_format.py  tools.py  typings.py  userint.py
digint/tests/: __init__.py  __main__.py  digint_tests.py  tools_tests.py  user_int_tests.py
docs/: digint.html  errors.html  index.html  notation_format.html  tools.html  typings.html  userint.html
docs/tests/: digint_tests.html  index.html  tools_tests.html  user_int_tests.html
reports/: COVERAGE.md  PDOC.txt  PYLINT.txt  PYRIGHT.txt  UNITTEST.txt  UNITTEST_py3.10.txt  UNITTEST_py3.11.txt  UNITTEST_py3.12.txt  UNITTEST_py3.7.txt
